Used CardView for common objective cards and starter Card